	  must be after the section.

	* postscript.c: Inserted PostScript option settings from pstops
	  were not corrected with custom option settings done on the
	  command line (numerical, string, password).

	* options.c: Small fix for better readability.

	* renderer.c: If there was only one PJL option in the PPD no PJL got
	  added at all (Ubuntu bug #303691).

2008-11-26 Lars Uebernickel <larsuebernickel@gmx.de>
	* options.c: When a numeric value is out of range, use the default
	  value instead of the closest valid value (i.e. min or max). Do not
	  truncate string options which are longer than allowed, use the
	  default instead. Apply AllowedChars and AllowedRegExp also to
	  Password options.

	  Small bug fix: The generated regular expression for AllowedChars was
	  missing the final '$' and therefore didn't match all cases
	  correctly.

	  Bug fix: Merge JCL options correctly

2008-11-21 Lars Uebernickel <larsuebernickel@gmx.de>
	* options.c: Fixed bug: Setting the page range of an option to
	  multiple ranges (seperated by comma), foomatic-rip was caught in an
	  infinte loop.

	* options.c: Fixed bug: Page ranges were not applied for command line
	  options when processing PostScript files (the renderer wasn't
	  restarted as it should have been).

2008-11-13 Lars Uebernickel <larsuebernickel@gmx.de>
	* options.c: Don't prepend @PJL to JCL options if they already start
	  with @PJL. Unhexify JCL commands.

	* options.c: Handle CustomJCL<option> and ParamCustomJCL<option>.
	  Prefer JCL Custom options over foomatic options (as was already done
	  for PostScript options).

2008-10-22  Till Kamppeter <till.kamppeter@gmail.com>

	* postscript.c: Reset the "fromcomposite" variable when treating
	  a "%%BeginFeature" line. In this case we do not do the treatment
	  of composite options and so the variable should never remain set
	  from a previous "%%FoomaticRIPOption" line. Fixes the problem
	  described in comment #23 of bug #173.
